# polire

./: .gitignore  .nojekyll  .pre-commit-config.yaml  IDW Initial.ipynb  LICENSE  README.md  Readme.md  _quarto.yml  index.html  index.qmd  natural-nn.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  robots.txt  search.json  setup.cfg  setup.py  sitemap.xml  usage.py  usage3.py  usage_interpolation.py  usage_learning_based_methods.py  usage_placement.ipynb  usage_placement.py
.github/workflows/: auto_publish_pypi.yml  python-package.yml  tests.yml
.ipynb_checkpoints/: Dirichlet Process-checkpoint.ipynb  IDW Initial-checkpoint.ipynb
IDW/: IDW Initial.ipynb
IDW/.ipynb_checkpoints/: IDW Initial-checkpoint.ipynb
IDW/scikit_comply/: working.py
IDW/src/: idw.py
IDW/tests/: IDW Initial.ipynb  Numpy vectorisastion.ipynb
ToolkitName/: __init__.py
ToolkitName/interpolate/: __init__.py
ToolkitName/placement/: __init__.py
ToolkitName/utils/: distance.py  gridding.py
docs/: conf.py  index.html  index.rst  run.sh
docs/auto_examples/: searchindex
docs/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  polire.custom.html  polire.html  polire.interpolate.base.html  polire.interpolate.html  polire.utils.html  (+10 more)
examples/: air_dat.ipynb  air_dat.ipynb.bak  all_in_one.html  all_in_one.ipynb
interpolation/: __init__.py  constants.py  utils.py
polire/: __init__.py  constants.py  preprocessing.py
testdata/: .~lock.30-03-18.csv#  temp_train_ECM.npy  temp_train_vals.npy  temp_train_xy.npy
tests/: test_basic.py  test_qbc.py
(+150 files in other folders)
