[metadata]
name = polire
author = Zeel B Patel, Deepak Narayanan, Apoorv Agnihotri, Nipun Batra
author_email = patel_zeel@iitgn.ac.in
description = Spatial Interpolation in Python
url = https://github.com/sustainability-lab/polire
license = BSD 3-Clause License
license_file = LICENCE
long_description = file: README.md
long_description_content_type = text/markdown